showing all clinic doctors after filtering + button position

--- a/src/App/Content/DoctorsList/DoctorsList.css
+++ b/src/App/Content/DoctorsList/DoctorsList.css
@@ -1,3 +1,9 @@
 .doctors-list-button{
     margin-top: 6px;
 }
+
+.doctors-list-button1{
+    margin-top: 6px;
+    margin-left: 20px;
+    color: #ffffff;
+}
