updated PredefinedExaminations.css file

--- a/src/App/Content/Clinic/PredefinedExaminations/PredefinedExaminations.css
+++ b/src/App/Content/Clinic/PredefinedExaminations/PredefinedExaminations.css
@@ -6,3 +6,19 @@
     padding-left: 1em;
     text-align: left;
 }
+
+.schButton {
+    background-color: darkcyan;
+    border-color: darkcyan;
+    color: white;
+}
+
+.schButton:hover {
+    background-color: darkcyan;
+    border-color: darkcyan;
+    color: silver;
+}
+
+.predef-exam {
+    margin: 20px 30px;
+}
