--- a/src/App/Content/Ordinations/Ordinations.css
+++ b/src/App/Content/Ordinations/Ordinations.css
@@ -16,3 +16,41 @@
     border-left: darkcyan 2px solid;
     min-height: 80vh;
 }
+
+.new-ordination {
+    display: inline;
+    background-color: darkcyan;
+    border-color: darkcyan;
+    color: white;
+    float: right;
+    margin-right: 40px;
+}
+
+.new-ordination:hover {
+    display: inline;
+    background-color: darkcyan;
+    border-color: darkcyan;
+    color: silver;
+}
+
+.Ordinations h3 {
+    display: inline;
+}
+
+.delete-ord {
+    color: red;
+}
+
+.calendar-ord {
+    color: darkcyan;
+}
+
+.delete-ord:hover {
+    background-color: red;
+    color: white;
+}
+
+.calendar-ord:hover {
+    background-color: darkcyan;
+    color: white;
+}
