little fixes and additions

--- a/src/App/Content/ClinicsList/ClinicsList.css
+++ b/src/App/Content/ClinicsList/ClinicsList.css
@@ -30,7 +30,7 @@ form{
     margin-top: 6px;
 }
 
-.clinics-list-button1{
+.clinics-list-all{
     margin-top: 6px;
     margin-left: 20px;
     color: #ffffff;
