--- a/src/App/Content/Doctor/NewAppointmentDoctor/NewAppointmentDoctor.css
+++ b/src/App/Content/Doctor/NewAppointmentDoctor/NewAppointmentDoctor.css
@@ -1,29 +1,42 @@
-.new-appointment-form {
+.NewAppointmentDoctor .new-appointment-form {
     background-color: silver;
     padding: 15px;
     margin: 30px 60px;
     border-radius: 0 25px 0 25px;
 }
 
-.new-appointment-header {
+.NewAppointmentDoctor form {
+    background-color: silver;
+}
+
+.NewAppointmentDoctor .new-appointment-header {
     margin: 30px 30px 0 30px;
 }
 
-.create-appointment-btn {
+.NewAppointmentDoctor .create-appointment-btn {
     background-color: darkcyan;
     border-color: darkcyan;
     color: white;
 }
 
-.create-appointment-btn:hover {
+.NewAppointmentDoctor .create-appointment-btn:hover {
     background-color: darkcyan;
     border-color: darkcyan;
     color: silver;
 }
 
-.new-app-doctor-image {
+.NewAppointmentDoctor .new-app-doctor-image {
     background-image: url("https://images.unsplash.com/photo-1491895200222-0fc4a4c35e18?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80");
     background-size: cover;
     border-left: darkcyan 2px solid;
     min-height: 80vh;
+}
+
+.NewAppointmentDoctor .datepick {
+    padding: 7px;
+    border-radius: 5px;
+    box-shadow: 0;
+    border: 0;
+    width: 250px;
+    color: gray;
 }
