Revert "Merge branch 'master' of https://github.com/DosticJelena/PSW-2019-2020-frontend"
This reverts commit dff4fc17217d718bd2c556257cb778030ae0e8a7, reversing
changes made to c13508a15b1b7561c9159f9e19acad7ee9a6f43f.

--- a/src/App/Content/MedicalRecord/AppointmentHistory/AppointmentHistory.css
+++ b/src/App/Content/MedicalRecord/AppointmentHistory/AppointmentHistory.css
@@ -7,23 +7,9 @@
     text-align: left;
 }
 
-.history-table {
-    margin: 30px 190px 100px 190px;
+.rtable {
+    margin: 30px 100px 100px 100px;
     font-size: larger;
     text-align:center;
    
-}
-
-.h-table1{
-    margin: 30px 50px 100px 70px;
-    font-size: larger;
-    text-align:center;
-
-}
-
-.h-table2{
-    margin: 30px 50px 100px 30px;
-    font-size: larger;
-    text-align:center;
-
 }
