--- a/src/App/LoginAndRegistration/Register/Register.css
+++ b/src/App/LoginAndRegistration/Register/Register.css
@@ -47,3 +47,44 @@ form .btn {
 form a {
     color: darkcyan;
 }
+
+.Register label {
+    font-size: 1em;
+    margin-bottom: 0.15em;
+    color: #222;
+    font-weight: lighter;
+}
+
+.Register input {
+    padding: 10px 10px;
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid #cfcfcf;
+  }
+
+.input.error {
+    border: 1px solid red;
+}
+
+.errorMessage {
+    color: red;
+    font-size: 0.75em;
+    display: relative;
+  }
+
+.firstNameR,
+.lastNameR,
+.email,
+.address, 
+.city, 
+.country, 
+.phoneNumber,
+.password,
+.passwordConfirm {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    width: 100%;
+
+  }
+  
