--- a/src/App/Content/PersonalProfile/EditPersonalProfile.css
+++ b/src/App/Content/PersonalProfile/EditPersonalProfile.css
@@ -12,3 +12,14 @@
     border-left: darkcyan 2px solid;
     min-height: 80vh;
 }
+
+.change-pass {
+    color: white;
+    border: 1px solid darkcyan;
+    background-color: darkcyan;
+    margin-right: 10px;
+}
+
+.change-pass:hover {
+    color: silver;
+}
